+ Fixed glue code.

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 }
 
 group = 'fund.theherd'
-version = '0.0.1'
+version = '0.0.2'
 sourceCompatibility = '1.8'
 
 publishing {
@@ -44,7 +44,7 @@ task cucumber() {
         javaexec {
             main = "io.cucumber.core.cli.Main"
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', 'pretty', '--glue', 'hellocucumber', 'src/test/resources']
+            args = ['--plugin', 'pretty', '--glue', 'cucumberseed', 'src/test/resources']
         }
     }
 }
